Enhance CORS configuration to support multiple origins via CORS_ORIGINS environment variable, with fallback to FRONTEND_URL. Update env.example with detailed comments for configuration options.

--- a/backend/env.example
+++ b/backend/env.example
@@ -1,6 +1,13 @@
 # Server Configuration
 PORT=3001
+# Frontend URL (for CORS and email links)
+# For single origin: FRONTEND_URL=https://yourdomain.com
+# For multiple origins: use CORS_ORIGINS instead (comma-separated)
 FRONTEND_URL=http://localhost:3000
+# CORS Origins (optional - comma-separated list for multiple allowed origins)
+# Example: CORS_ORIGINS=https://app.yourdomain.com,https://www.yourdomain.com
+# If not set, uses FRONTEND_URL as single origin
+# CORS_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
 
 # MongoDB Connection
 MONGODB_URI=mongodb://localhost:27017/hashenv
