Refactor email service to use Brevo API for sending emails, removing nodemailer dependency. Update environment variables in env.example for Brevo configuration. Modify package.json and package-lock.json to remove nodemailer and add necessary type definitions.

--- a/backend/env.example
+++ b/backend/env.example
@@ -20,16 +20,18 @@ JWT_EXPIRES_IN=7d
 # Generate with: node -e "console.log(require('crypto').randomBytes(32).toString('base64'))"
 MASTER_ENCRYPTION_KEY=your-base64-encoded-32-byte-key-here
 
-# Email Configuration (Required for production)
-# In development mode, verification URLs are logged to console instead of sending emails
-# For production, configure SMTP settings:
-# SMTP_HOST=smtp.sendgrid.net
-# SMTP_PORT=587
-# SMTP_SECURE=false
-# SMTP_USER=apikey (or your Gmail address for Gmail SMTP)
-# SMTP_PASSWORD=your-sendgrid-api-key (or Gmail App Password)
-# SMTP_FROM=noreply@yourdomain.com (email address shown in "from" field)
-# SMTP_DISPLAY_NAME=Your App Name (optional: display name shown in email clients)
+# Email Configuration (SEND-ONLY - No email receiving functionality)
+# This service only sends transactional emails (verification, password reset)
+# It does NOT receive or process incoming emails
+#
+# Using Brevo API for sending emails via HTTP API (not SMTP)
+# Get your API key from: https://app.brevo.com/settings/keys/api
+BREVO_API_KEY=your-brevo-api-key-here
+# Sender email address (must be verified in Brevo account)
+# Go to: https://app.brevo.com/settings/senders to verify your sender email
+BREVO_SENDER_EMAIL=noreply@yourdomain.com
+# Optional: Sender display name shown in email clients
+BREVO_SENDER_NAME=HashEnv
 
 # Environment
 NODE_ENV=development
