--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/morgan": "^1.9.10",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.10.5",
     "bcryptjs": "^2.4.3",
@@ -26,6 +27,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
+    "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
     "typescript": "^5.3.3"
   },
