--- a/backend/package.json
+++ b/backend/package.json
@@ -29,11 +29,11 @@
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "@types/morgan": "^1.9.10",
+    "morgan": "^1.10.1"
   },
   "devDependencies": {
-    "@types/morgan": "^1.9.10",
-    "morgan": "^1.10.1",
     "tsx": "^4.7.0"
   },
   "license": "ISC",
